<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_4sdp">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="15dp"
            app:cardElevation="@dimen/_5sdp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/title_background"
                    android:gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/add_habit"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:hint="@string/title"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/mainColor"
                    app:startIconTint="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:hint="@string/description"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/mainColor"
                    app:startIconTint="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minLines="2"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_2sdp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/repeatRadioGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:textAlignment="center"
                        tools:ignore="UselessParent">

                        <RadioButton
                            android:id="@+id/once"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:background="@drawable/repeat_background"
                            android:button="@null"
                            android:checked="true"
                            android:text="@string/once"
                            android:textAlignment="center"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:id="@+id/daily"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:background="@drawable/repeat_background"
                            android:button="@null"
                            android:text="@string/daily"
                            android:textAlignment="center"
                            android:textColor="@color/black" />

                    </RadioGroup>
                </LinearLayout>

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:timePickerMode="spinner" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_8sdp"
                    android:background="@drawable/background"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>